tests/neg/inclusion/in-03.ts

// Predefined objects
assert("PII" in Math);          // returns false
 
